--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,51 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Ionic Blank
+      Login LocalStorage
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-card class="welcome-card">
+    <img src="https://app.ontraport.com/images/login-graphic-woman-using-app.png">
+    <ion-card-header>
+      <ion-card-title>
+        LocalStorage
+      </ion-card-title>
+      <ion-card-subtitle>
+        Programa de Login
+      </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        O LocalStorage salva dados no computador do visitante, que ficam vinculados ao(apenas acessiveis pelo) seu dominio. E para usar é bem simples.
+      </p>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-list lines="none">
+    <ion-list-header>
+      <ion-label>
+        Menu
+      </ion-label>
+    </ion-list-header>
+
+    <ion-item href="home">
+      <ion-icon slot="start" color="primary" name="home"></ion-icon>
+      <ion-label>Home</ion-label>
+    </ion-item>
+
+    <ion-item href="cadastro">
+      <ion-icon slot="start" color="success" name="person"></ion-icon>
+      <ion-label>Cadastro</ion-label>
+    </ion-item>
+
+    <ion-item href="login">
+      <ion-icon slot="start" color="tertiary" name="log-in"></ion-icon>
+      <ion-label>Logar</ion-label>
+    </ion-item>
+
+  </ion-list>
+
 </ion-content>
